--- a/app/src/main/res/layout/item_recycler.xml
+++ b/app/src/main/res/layout/item_recycler.xml
@@ -28,12 +28,12 @@
         tools:text="Is main: isMain" />
 
     <TextView
-        android:id="@+id/status"
+        android:id="@+id/license_author"
         style="@style/TitleStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/id"
-        tools:text="Status: status" />
+        tools:text="License author: license" />
 
     <ImageView
         android:id="@+id/image"
@@ -43,6 +43,6 @@
         android:contentDescription="@string/content_description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/status" />
+        app:layout_constraintTop_toBottomOf="@id/license_author" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
